# uhabits_converter

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  DEV.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: __init__.py  app.py  cli.py  convert.py  editor.kv  script.py
tests/data/: Habits.csv  Habits_alt.csv  README.md  Repetitions.csv  Repetitions_alt.csv  android_metadata.csv  input.db
tests/integration/: README.md  test_cli_integration.py
tests/unit/: README.md  test_cli.py  test_convert.py
