[tool.poetry]
name = "uhabits_converter"
version = "0.1.0"
description = "convert types of habit from uhabits"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Kivy = "1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
